# data-engineering-1

./: .gitignore
A1/: myGreatNewNotebook.ipynb
A2/: README.md
A2/backup/: full_linebyline.py  full_polars.py  installMongoDB.sh  mapper.py  reducer.py  runMongoDBinclIngest.py  runWithHadoop.sh
A2/task1.4ex2/: makeplot.py
A3/: lab3_a1.ipynb  lab3_b.ipynb  runthis.sh
A3/.ipynb_checkpoints/: lab3-checkpoint.ipynb
Lab2/: makeplot.py
Lab2/backup/: calc_diff.py  runWithoutHadoop.sh
Lab2/backup/wordcount_java/: makeWordCountIntoJarFile.sh
Lab2/backup/wordcount_t14/: WordCount.java
Lab3/: lab3_a.ipynb  lab3_b.ipynb  section_c+d.typst
Lab4/: install_prerequisites.sh
Lab4/task1/: Dockerfile  run1_build.sh  run2_run.sh  run3_interactive.sh
Lab4/task2/: run4_calcpi.sh
Project/: README.md  compose.sh  docker-compose.yaml  install-aws.sh  install-docker.sh  registry-compose.yaml  run.sh  run_swarm.sh  swarm_stop.sh
Project/cpreducer/: Dockerfile
Project/cpworker/: Dockerfile
Project/dbi/: README.md  pyproject.toml
Project/dbi/dbi/: __init__.py  dbinterface.py  objectstorage.py
Project/dbwatcher/: Dockerfile
Project/object-storage/: localstack-s3-docker-compose.yaml  run.sh  test-aws.sh
Project/rabbitmq/: rabbitmq.Dockerfile
Project/report/: bib.bib  main.typ
Project/script_workers/: cpmapper.Dockerfile  cpreducer.Dockerfile  cpreducer_tasks.py  cpworker.Dockerfile  cpworker_tasks.py  dbwatcher.Dockerfile  dbwatcher.py  dbwatcher_tasks.py  tasks.py
Project/web-frontend/: Dockerfile  dbinterface.py  main.py  webserver.Dockerfile
(+12 files in other folders)
